alb-ingress-controller/path-based/deploy-alb.yaml
# Deployment for blog-nginx

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-nginx-deployment
  labels:
    app: blog-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-nginx
  template:
    metadata:
      labels:
        app: blog-nginx
    spec:
      containers:
        - name: blog-nginx
          #image: stacksimplify/kube-nginxapp1:1.0.0
          image: mydeendevops369/blog
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
# -------------------------------
# NodePort Service for blog-nginx
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: blog-nginx-nodeport-service
  labels:
    app: blog-nginx
  # Uncomment if ALB healthcheck requires it
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /blog/index.html
spec:
  type: NodePort
  selector:
    app: blog-nginx
  ports:
    - port: 80
      targetPort: 80  # Optional: specify static NodePort between 30000-32767
---
# -------------------------------
# Ingress Resource for blog-nginx via AWS ALB
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginxblog
  labels:
    app: blog-nginx
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: blog-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: my-aws-ingress-class
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-nginx-nodeport-service
                port:
                  number: 80
